--- a/index.html
+++ b/index.html
@@ -1,7 +1,87 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>researcHQ.org</h1>
-<p>Hello world.</p>
-</body>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="researcHQ.org : user-funded research = useful research">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>researcHQ.org</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/researcHQ">View on GitHub</a>
+
+          <h1 id="project_title">researcHQ.org</h1>
+          <h2 id="project_tagline">user-funded research = useful research</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="what-is-this" class="anchor" href="#what-is-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is this?</h3>
+
+<p>The mission of researcHQ.org is to get useful research funded by matching funding controlled by those who will use the research with promising researchers.</p>
+
+<p>Specific goals include:</p>
+
+<ul>
+<li>provide <em>practitioners</em> with timely, relevant, and trustworthy answers to questions they have at a reduced cost</li>
+<li>help <em>researchers</em> make their research more relevant and useful while increasing their access to funding</li>
+<li>lower the transaction cost to funding researchers by greasing the wheels of contracting and dealing with IP issues</li>
+</ul>
+
+<h3>
+<a id="the-problem" class="anchor" href="#the-problem" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Problem</h3>
+
+<p>Research currently gets initiated in a multitude of ways, most of which are financially inefficient and dilute the relevance of the work.</p>
+
+<p>Major corporations and foundations commonly sponsor external research (not even to mention the multitude of internal research) that helps them create a better product or work towards solving a particular issue.  However, the transaction cost for sponsoring research is often so great that this only makes sense for major bucks projects, which <em>limits access</em> to research except to huge enterprises.</p>
+
+<p>Government sponsored research is supposed to fill in the gap.  However, decisions about how to spend government funded research <em>start at congress</em>, limiting its relevancy and flexibility to deal with current issues at hand.  It is also financially inefficient, as it has to pass down through several layers of bureaucracy before finally landing in the bank of an actual researcher.  Don't get me wrong - great things have been done with government sponsored research, but it is not an efficient process.</p>
+
+<p>So what if I am a small business, foundation, contractor, or government agency?  </p>
+
+<p>How do <em>your research needs</em> get satisfied?</p>
+
+<p>Well there are a few ways, all chancy.  Let's pretend you are working for a local transportation agency and want to know something like how much parallel parking slows down a bus running in an adjacent lane.  You can:
+1 half-ass the research yourself with whatever leftover time you have.  Have aspirations to publish the research, but five years go by and you haven't had time yet so you figure nobody cares anymore.
+1 lobby your State DOT to ask for research project overseen by the National Academy of Sciences, and four-to-five years later you will have a watered-down report written by competent, although cubby-holed, consultants and overseen by a staff person that doesn't have on-the-ground experience 
+1 hang out at your local university, take some grad students out for beers, take their advisor out for coffee, spend a year trying to work through IP and contracting issues, befriend new batch of grad students (the previous ones have graduated) and hope they have the same skill set, and then start your research.
+1 have beers with a couple of buddies at other local agencies, realize you all have the same questions.  Find money at each of our respective institutions to spend on answering the question.  Find a non-profit to "hold" the pooled money and hire a consultant.  Circulate an MOA.  Circulate it again with edits from 3rd agency.  A year later, issue an RFP that conforms to each agency's procurement standards.  Hire consultant.  Find more money.  Circulate MOA again.  Start work. Realize that what you are working on is no longer relevant.
+1 have cocktails with professor, have co-workers shower professor with compliments about the relevancy of his research, he offers you the perfect grad student to take up residence in your office for the summer. For free. It's cheap, it's relevant, it's awesome.  It's also extremely unlikely.</p>
+
+<p>All of these has happened to me.  By far, the last one is the most preferable, but it is also extremely rare and presumes that you happen to have cocktails with the right professor at the right time with the right funding situation to make it happen.</p>
+
+<h3>
+<a id="the-current-thinking-on-a-solution" class="anchor" href="#the-current-thinking-on-a-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>The [current thinking on a] Solution</h3>
+
+<p>The current thinking of the activities of researcHQ.org is to take the aspects of "what works" from the above examples, and lessen the hurt of the parts that are painful (costs, contracting). </p>
+
+<h3>
+<a id="who-what-where" class="anchor" href="#who-what-where" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who What Where?</h3>
+
+<p><a href="https://github.com/e-lo" class="user-mention">@e-lo</a> is <a href="https://www.linkedin.com/profile/view?id=5649127">Elizabeth Sall</a>, outgoing Deputy Director for Technology Services for the <a href="http://www.sfcta.org/modeling-and-travel-forecasting">San Francisco County Transportation Authority</a> and current free thinker and do-er. She has been wanting to embark on this effort for a while and is glad to finally has some time to devote to it.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
