--- a/index.html
+++ b/index.html
@@ -63,10 +63,18 @@
 <li>have cocktails with professor, have co-workers shower professor with compliments about the relevancy of his research, he offers you the perfect grad student to take up residence in your office for the summer. For free. It's cheap, it's relevant, it's awesome.  It's also extremely unlikely.</p></li>
 <p>All of these has happened to me.  By far, the last one is the most preferable, but it is also extremely rare and presumes that you happen to have cocktails with the right professor at the right time with the right funding situation to make it happen.</li></ol>
 
+<p>Most of the options characterized above suffer from one of the following issues:</p>
+<ul>
+  <li>little to no direct access between researchers and people who would use the research, which leads to decreased relevancy and timeliness of research</li>
+  <li>intolerable administrative burden relative to the size of the questions</li>
+  <li>few opportunities to collaboratively develop a flexible research agenda</li>
+</ul>
+
+
 <h3>
 <a id="the-current-thinking-on-a-solution" class="anchor" href="#the-current-thinking-on-a-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>The [current thinking on a] Solution</h3>
 
-<p>The current thinking of the activities of researcHQ.org is to take the aspects of "what works" from the above examples, and lessen the hurt of the parts that are painful (costs, contracting). </p>
+<p>The current thinking of the activities of researcHQ.org is to take the aspects of "what works" from the above examples, and lessen the hurt of the parts that are painful (costs, contracting). While it is beyond clichéd to discuss your solution as a combination of two already popular tech solutions, here goes – it’s like Kickstarter/GlobalGiving meets Task Rabbit/eLance.   A two-way matching marketplace to help researchers find funders who will help provide needed resources, data, and advice and help funders find collaborators and researchers to execute the research. </p>
 
 <h3>
 <a id="who-what-where" class="anchor" href="#who-what-where" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who What Where?</h3>
